--- a/newfile/style.css
+++ b/newfile/style.css
@@ -1,4 +1,5 @@
 #container{
+    position: relative;
     background: rgba( 255, 255, 255, 0.25 );
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
 backdrop-filter: blur( 13.5px );
