--- a/newfile/style.css
+++ b/newfile/style.css
@@ -1,8 +1,20 @@
-#container{
+#container {
     position: relative;
-    background: rgba( 255, 255, 255, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 13.5px );
--webkit-backdrop-filter: blur( 13.5px );
-border-radius: 10px;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+}
+
+div#instructions-container {
+    position: absolute;
+    top: 1rem;
+    right: 61%;
+    opacity: 0.7;
+    height: 300px;
+    overflow: hidden;
+    scroll-behavior: auto;
+    overflow: scroll;
+    background-color: rgb(198, 234, 234);
 }
